[package]
name = "trice"
publish = true
edition = "2021"
version = "0.3.0"
readme = "README.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "A minimal replacement for std::time::Instant that works in WASM for the web and Node.js."
repository = "https://github.com/surrealdb/trice"
homepage = "https://github.com/surrealdb/trice"
keywords = ["instant", "measure", "performance", "time", "wasm"]
categories = ["date-and-time", "web-programming", "wasm"]
license = "Apache-2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["Window", "Performance", "PerformanceTiming"] }
